# rustex

./: .dockerignore  .env_template  Cargo.toml  Dockerfile.api  Dockerfile.micro  Dockerfile.test  README.md  diesel.toml  docker-compose.yaml
examples/: buy_get_delete.py  many_orders.py  submit_buy_order.py  submit_buy_orders_parallel.py
migrations/2025-02-02-184833_orders/: down.sql  up.sql
migrations/2025-02-02-205708_trades/: up.sql
migrations/2025-02-10-080120_pending_orders/: down.sql  up.sql
migrations/2025-02-19-103615_cancelled_orders/: down.sql  up.sql
rustex-api/: Cargo.toml  README.md
rustex-api-examples/: submit_buy_order.py
rustex-api/src/: auth.rs  main.rs
rustex-api/src/api_rest/: mod.rs  routes.rs  state.rs
rustex-api/src/api_rest/handlers/: health.rs  mod.rs  orders.rs  users.rs
rustex-api/src/api_socket/: mod.rs
rustex-api/src/auth/: claims.rs  extractor.rs  middleware.rs  mod.rs
rustex-core/: Cargo.toml
rustex-core/src/: currencies.rs  lib.rs  order_matching.rs  prelude.rs
rustex-core/src/db/: models.rs  schema.rs
rustex-core/src/models/: cancellations.rs  mod.rs  order_book.rs  orders.rs  trade.rs  trades.rs
rustex-errors/: Cargo.toml
rustex-errors/src/: lib.rs
rustex-micro/: Cargo.toml
rustex-micro/src/: db_service.rs  lib.rs  match_service.rs  time_service.rs
rustex-micro/src/services/: db_service.rs  match_service.rs  time_service.rs
rustex-test/: Cargo.toml  README.md
rustex-test/src/: main.rs  test_buy_get_delete.rs
