[workspace]
members = [
    "rustex-api",
    "rustex-core",
    "rustex-errors",
    "rustex-micro",

]
resolver = "2"

[workspace.dependencies]
rustex-api = { path = "./rustex-api" }
rustex-core = { path = "./rustex-core" }
rustex-errors = { path = "./rustex-errors" }
rustex-micro = { path = "./rustex-micro" }
tests = { path = "./tests" }

# If more than one crate shares a dependency
# then make it a workspace dependency
actix-web = { version = "4.9.0", features = ["rustls-0_23"] }
anyhow = "1.0.95"
chrono = "0.4.39"
diesel = { version = "2.2.7", features = ["postgres", "chrono"] }
diesel-async = { version = "0.5.2", features = ["postgres", "deadpool"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15.7"
env_logger = "0.11.6"
futures = "0.3.31"
futures-util = "0.3.31"
jsonwebtoken = "9.3.0"
log = "0.4.25"
paste = "1.0.15"
serde = { version = "1.0.217", features = ["derive"] }
tarpc = { version = "0.35.0", features = ["full"] }
tokio = { version = "1", features = ["full"] }
