[package]
name = "rustex-api"
version = "0.0.0"
authors = ["Diego Pardo"]
edition = "2021"

[features]
rest_api = ["actix-web", "rustls"]
socket_api = []
default = ["rest_api"]


[dependencies]
actix-web = { version = "4.9.0", optional = true, features = ["rustls-0_23"] }
log = { workspace = true }
rustex-micro = { workspace = true }
rustex-core = { workspace = true }
rustls = { version = "0.23", optional = true }
rustls-pemfile = "2.2.0"
serde = { workspace = true }
serde_json = "1.0.135"
tarpc = { version = "0.35.0", features = ["full"] }
tokio = { workspace = true }
