[package]
name = "rustex-api"
version = "0.0.0"
authors = ["Diego Pardo"]
edition = "2021"

[features]
rest_api = ["actix-web", "rustls"]
socket_api = []
default = ["rest_api"]

[dependencies]
actix-web = { workspace = true, optional = true }
anyhow = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
env_logger = { workspace = true }
futures-util = { workspace = true }
jsonwebtoken = { workspace = true }
log = { workspace = true }
rustex-core = { workspace = true }
rustex-errors = { workspace = true }
rustex-micro = { workspace = true }
rustls = { version = "0.23", optional = true }
rustls-pemfile = "2.2.0"
serde = { workspace = true }
serde_json = "1.0.135"
tarpc = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
reqwest = "0.12.12"
