[package]
name = "rustex-core"
version = "0.0.0"
authors = ["Diego Pardo"]
edition = "2021"

[dependencies]
chrono = { workspace = true }
diesel = { workspace = true }
diesel-derive-enum = { workspace = true }
hashbrown = { workspace = true }
log = { workspace = true }
paste = { workspace = true }
rustex-errors = { workspace = true }
serde = { workspace = true }
