[package]
name = "rustex-micro"
version = "0.0.0"
authors = ["Diego Pardo"]
edition = "2021"

[lib]
name = "rpc_clients"
path = "src/lib.rs"

[[bin]]
name = "time-service"
path = "src/time_service.rs"

[[bin]]
name = "match-service"
path = "src/match_service.rs"

[dependencies]
anyhow = "1.0.95"
env_logger = { workspace = true }
futures = "0.3.31"
log = { workspace = true }
paste = "1.0.15"
rustex-core = { workspace = true }
tarpc = { version = "0.35.0", features = ["full"] }
tokio = { workspace = true }
